--- a/lib/a_0001-06-01_autosave.yml
+++ b/lib/a_0001-06-01_autosave.yml
@@ -143,7 +143,7 @@ spells_class: !ruby/object:Spells
       :cost: 250
       :description: A black ray projects from your pointed finger, sickening your
         opponent.
-name: audra
+name: a
 race: drai
 level: 1
 full_spell_list: *1
@@ -198,8 +198,8 @@ exp_needed: 100
 available_attribute_points: 0
 total_proficiency_points: 1
 available_proficiency_points: 1
-hp: 19
-max_hp: 19
+hp: 21
+max_hp: 21
 bab: 1
 ac: 14
 one_hand_atk: 5
