--- a/lib/a_0001-06-02_autosave.yml
+++ b/lib/a_0001-06-02_autosave.yml
@@ -143,7 +143,7 @@ spells_class: !ruby/object:Spells
       :cost: 250
       :description: A black ray projects from your pointed finger, sickening your
         opponent.
-name: audra
+name: a
 race: drai
 level: 1
 full_spell_list: *1
@@ -175,7 +175,7 @@ shield_bonus: 0
 max_dex_bonus_for_ac: false
 max_proficency: 10
 date: 1
-hook: 2
+hook: 3
 min_str: 8
 min_dex: 8
 min_con: 8
@@ -198,8 +198,8 @@ exp_needed: 100
 available_attribute_points: 0
 total_proficiency_points: 1
 available_proficiency_points: 1
-hp: 19
-max_hp: 19
+hp: 21
+max_hp: 21
 bab: 1
 ac: 14
 one_hand_atk: 5
