--- a/lib/save_files/a_0001-06-01_autosave.yml
+++ b/lib/save_files/a_0001-06-01_autosave.yml
@@ -144,7 +144,7 @@ spells_class: !ruby/object:Spells
       :description: A black ray projects from your pointed finger, sickening your
         opponent.
 name: a
-race: drai
+race: relic
 level: 1
 full_spell_list: *1
 known_spells: {}
@@ -175,7 +175,7 @@ shield_bonus: 0
 max_dex_bonus_for_ac: false
 max_proficency: 10
 date: 1
-hook: 2
+hook: 3
 min_str: 18
 min_dex: 18
 min_con: 18
@@ -198,8 +198,8 @@ exp_needed: 100
 available_attribute_points: 0
 total_proficiency_points: 1
 available_proficiency_points: 0
-hp: 22
-max_hp: 22
+hp: 32
+max_hp: 32
 bab: 1
 ac: 14
 one_hand_atk: 5
