Updating combat and creating tests for it.

--- a/lib/save_files/mattyb_0001-06-01_autosave.yml
+++ b/lib/save_files/mattyb_0001-06-01_autosave.yml
@@ -4,7 +4,7 @@ items: !ruby/object:Items
     fists: &3
       :name: fists
       :type: unarmed weapon
-      :dice: 3
+      :dice: 4
       :number_of_dice: 1
       :crit: 20
       :crit_damage: 3
@@ -143,8 +143,8 @@ spells_class: !ruby/object:Spells
       :cost: 250
       :description: A black ray projects from your pointed finger, sickening your
         opponent.
-name: a
-race: drai
+name: mattyb
+race: relic
 level: 1
 full_spell_list: *1
 known_spells: {}
@@ -154,19 +154,19 @@ inventory:
 default_weapon: *3
 equipped_weapon: *3
 equipped_shield: false
-str: 8
-dex: 8
-con: 8
+str: 18
+dex: 18
+con: 18
 mag: 8
 cha: 8
-str_modifier: -1
-dex_modifier: -1
-con_modifier: -1
+str_modifier: 4
+dex_modifier: 4
+con_modifier: 4
 mag_modifier: -1
 cha_modifier: -1
 one_hand_prof: 0
 dual_wield_prof: 0
-two_hand_prof: 0
+two_hand_prof: 1
 magic_prof: 0
 unarmed_prof: 0
 spell_failure_chance: 0
@@ -175,10 +175,10 @@ shield_bonus: 0
 max_dex_bonus_for_ac: false
 max_proficency: 10
 date: 1
-hook: 2
-min_str: 8
-min_dex: 8
-min_con: 8
+hook: 3
+min_str: 18
+min_dex: 18
+min_con: 18
 min_mag: 8
 min_cha: 8
 max_str: 18
@@ -195,27 +195,27 @@ wealth: 0
 fame: 0
 current_exp: 0
 exp_needed: 100
-available_attribute_points: 30
+available_attribute_points: 0
 total_proficiency_points: 1
-available_proficiency_points: 1
-hp: 4
-max_hp: 4
+available_proficiency_points: 0
+hp: 30
+max_hp: 30
 bab: 1
-ac: 9
-one_hand_atk: 0
-one_hand_damage: -1
-dual_wield_atk: 0
-dual_wield_damage: -1
-two_hand_atk: 0
-two_hand_damage: -2
-unarmed_atk: 0
-unarmed_damage: -1
-staff_atk: 0
-staff_damage: -1
-attack: 0
-damage: -1
+ac: 14
+one_hand_atk: 5
+one_hand_damage: 4
+dual_wield_atk: 5
+dual_wield_damage: 4
+two_hand_atk: 6
+two_hand_damage: 7
+unarmed_atk: 5
+unarmed_damage: 4
+staff_atk: 5
+staff_damage: 4
+attack: 5
+damage: 4
 mag_resist: -2
-cbm: 0
-cbm_def: 9
+cbm: 5
+cbm_def: 19
 max_mana: -50
 mana: -50
