Deciding to start working on this. Doing a push from my recent content.

--- a/lib/save_files/a_0001-06-01_autosave.yml
+++ b/lib/save_files/a_0001-06-01_autosave.yml
@@ -194,38 +194,40 @@ name: a
 race: drai
 level: 1
 full_spell_list: *8
-known_spells: {}
+known_spells:
+  ear-piercing scream: *7
 item_list: *9
 inventory:
   fists: *10
 default_weapon: *10
 equipped_weapon: *10
 equipped_shield: false
-str: 18
-dex: 18
-con: 18
+str: 8
+dex: 8
+con: 8
 mag: 8
 cha: 8
-str_modifier: 4
-dex_modifier: 4
-con_modifier: 4
+str_modifier: -1
+dex_modifier: -1
+con_modifier: -1
 mag_modifier: -1
 cha_modifier: -1
 one_hand_prof: 0
 dual_wield_prof: 0
 two_hand_prof: 0
 magic_prof: 0
-unarmed_prof: 1
+unarmed_prof: 0
 spell_failure_chance: 0
 armor_bonus: 0
 shield_bonus: 0
 max_dex_bonus_for_ac: false
 max_proficency: 10
+current_status_effects: []
 date: 1
 hook: 2
-min_str: 18
-min_dex: 18
-min_con: 18
+min_str: 8
+min_dex: 8
+min_con: 8
 min_mag: 8
 min_cha: 8
 max_str: 18
@@ -242,28 +244,28 @@ wealth: 0
 fame: 0
 current_exp: 0
 exp_needed: 100
-available_attribute_points: 0
+available_attribute_points: 30
 total_proficiency_points: 1
-available_proficiency_points: 0
-init: 4
-hp: 23
-max_hp: 23
+available_proficiency_points: 1
+init: -1
+hp: 3
+max_hp: 3
 bab: 1
-ac: 14
-one_hand_atk: 5
-one_hand_damage: 4
-dual_wield_atk: 5
-dual_wield_damage: 4
-two_hand_atk: 5
-two_hand_damage: 6
-unarmed_atk: 6
-unarmed_damage: 5
-staff_atk: 5
-staff_damage: 4
-attack: 6
-damage: 5
+ac: 9
+one_hand_atk: 0
+one_hand_damage: -1
+dual_wield_atk: 0
+dual_wield_damage: -1
+two_hand_atk: 0
+two_hand_damage: -2
+unarmed_atk: 0
+unarmed_damage: -1
+staff_atk: 0
+staff_damage: -1
+attack: 0
+damage: -1
 mag_resist: -2
-cbm: 6
-cbm_def: 20
-max_mana: -50
-mana: -50
+cbm: 0
+cbm_def: 9
+max_mana: 0
+mana: 0
